# internal-AI-advisory-assistant

./: .env.example  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  feedback.py  health.py  ingest.py  query.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
app/ingestion/: __init__.py  chunker.py  embedder.py  processor.py
app/models/: __init__.py  documents.py  feedback.py  outputs.py  queries.py
app/retrieval/: __init__.py  bm25.py  hybrid.py  vector_store.py
app/services/: __init__.py  feedback.py  llm.py
app/workflows/: __init__.py  intent.py  orchestrator.py  prompts.py
scripts/: generate_sample_data.py  ingest_documents.py  init_db.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_chunker.py  test_intent.py
